--- a/02-carousel.css
+++ b/02-carousel.css
@@ -34,15 +34,19 @@ img {
 
 .carousel {
 	width: 800px;
-	padding: 32px;
-	padding-left: 86px;
+	padding: 32px 48px 32px 86px;
+	/* padding-left: 86px; */
 	margin: 100px auto;
-	background-color: #0d9488;
+	background-color: #087f5b;
 	border-radius: 8px;
+	position: relative;
 
 	display: flex;
 	align-items: center;
 	gap: 86px;
+}
+
+.dot--fill {
 }
 
 .testimonial-text {
@@ -62,4 +66,57 @@ img {
 .testimonial-job {
 	font-size: 12px;
 	color: #c3fae8;
+}
+
+/* CONTROLS */
+
+.btn {
+	background-color: #fff;
+	border: none;
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+	position: absolute;
+	box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.btn--left {
+	left: 0;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
+.btn--right {
+	right: 0;
+	top: 50%;
+	transform: translate(50%, -50%);
+}
+
+.btn-icon {
+	height: 24px;
+	width: 24px;
+	stroke: #087f5b;
+}
+
+.dots {
+	position: absolute;
+	left: 50%;
+	bottom: 0;
+	transform: translate(-50%, 32px);
+
+	display: flex;
+	gap: 12px;
+}
+
+.dot {
+	height: 12px;
+	width: 12px;
+	background-color: #fff;
+	border: 2px solid #087f5b;
+	border-radius: 50%;
+	cursor: pointer;
 }
